testsuite/poke.pkl/bconc-diag-2.pk
/* { dg-do compile } */

var a = 3#B /* { dg-error "expected integer" } */
          ::: 100;
